# TrafficSignRecognition

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_imglab.sh
images/proibido_estacionar/: testing.xml  training.xml
src/: detect.cpp  hog_detector.cpp
svm_detectors/: pare_detector.svm  proibido_estacionar_detector.svm
